fix instance card title overflow, homepage, and background discoloration

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -5,7 +5,7 @@
 .App-Body {
   background-color: rgba(70, 143, 70, 0.297);
   padding-bottom: 80px;
-  padding-top: 90px;
+  padding-top: 25px;
 }
 
 /* .App {
