--- a/frontend/src/components/Cards/styles.css
+++ b/frontend/src/components/Cards/styles.css
@@ -3,7 +3,6 @@
   justify-content: center;
   border-radius: 25px;
   width: 500px;
-  margin-top: 10%;
   background-color: #333;
 }
 
@@ -188,14 +187,22 @@
 /* --------Instance Card-------- */
 
 .instanceImage {
-  max-height: 100px;
-  max-width: 100px;
+  max-height: 200px;
+  max-width: 200px;
   border-radius: 10px;
   display: flex;
   /* padding: 10px; */
   /* align-content: flex-start;
   align-self: flex-start; */
   /* flex-direction: row; */
+}
+
+#instanceName {
+  width: 50%;
+}
+
+#instanceTitle {
+  overflow-wrap: break-word;
 }
 
 /* .instDisplays {
